--- a/1_base/nginx/Dockerfile
+++ b/1_base/nginx/Dockerfile
@@ -1,7 +1,7 @@
 FROM nginx 
 
-ADD custom.conf /etc/nginx/conf.d/
-
+COPY index.html /usr/share/nginx/html
+COPY custom.conf /etc/nginx/conf.d
 EXPOSE 8043
 
 ENV FOO bar
