--- a/1_base/nginx/custom.conf
+++ b/1_base/nginx/custom.conf
@@ -1,4 +1,13 @@
 server {
 	listen 8043;
 	server_name test.docker;	
+	
+	location / {
+		root /usr/share/nginx/html;
+		index index.html index.htm;
+	}
+
+	location /test {
+		return 200 '$hostname\n';
+	}
 }
