--- a/1_base/volumes/postgresql_python/Dockerfile
+++ b/1_base/volumes/postgresql_python/Dockerfile
@@ -4,9 +4,13 @@ WORKDIR /flask/app
 
 RUN apk add --no-cache postgresql-libs --virtual .build-deps gcc musl-dev postgresql-dev
 
-COPY . /flask/app/
+COPY app/ /flask/app/
 
 RUN pip install -r requirements.txt
+
+ENV FLASK_APP=app.py
+
+ENV FLASK_RUN_HOST=0.0.0.0
 
 EXPOSE 5000
 
